force-app/main/default/objects/Account/fields/LPCR_Effectif__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Effectif__c</fullName>
    <label>Effectif</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>