force-app/main/default/objects/Account/fields/LPCR_EmailFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi facture par e-mail</label>
    <type>Checkbox</type>
</CustomField>