force-app/main/default/objects/Account/fields/LPCR_EmailRepresentant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailRepresentant1__c</fullName>
    <formula>LPCR_Representant1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email du Représentant 1</label>
    <type>Text</type>
</CustomField>