force-app/main/default/objects/Account/fields/LPCR_EmailRepresentant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailRepresentant2__c</fullName>
    <formula>LPCR_Representant2__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email du Représentant 2</label>
    <type>Text</type>
</CustomField>