force-app/main/default/objects/Account/fields/LPCR_EnCoursCreation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnCoursCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En cours de création</label>
    <type>Checkbox</type>
</CustomField>