force-app/main/default/objects/Account/fields/LPCR_Enseigne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Enseigne__c</fullName>
    <label>Enseigne</label>
    <length>80</length>
    <type>Text</type>
</CustomField>