force-app/main/default/objects/Account/fields/LPCR_EntiteJuridique2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EntiteJuridique2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Juridique 2</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>