force-app/main/default/objects/Account/fields/LPCR_EntiteJuridique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EntiteJuridique__c</fullName>
    <formula>CASE(RecordType.DeveloperName,
&quot;Creche&quot;,Parent.Parent.Name,
&quot;Etablissement_LPCR&quot;,Parent.Name,
&quot;ReseauLPCR&quot;, Name,
Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entite Juridique</label>
    <type>Text</type>
</CustomField>