force-app/main/default/objects/Account/fields/LPCR_EnvoieFactureParent__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnvoieFactureParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturer les parents</label>
    <type>Checkbox</type>
</CustomField>