force-app/main/default/objects/Account/fields/LPCR_EnvoiProforma__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EnvoiProforma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi proforma</label>
    <type>Checkbox</type>
</CustomField>