force-app/main/default/objects/Account/fields/LPCR_EtatCaf__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EtatCaf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etat CAF / Reporting à joindre</label>
    <type>Checkbox</type>
</CustomField>