force-app/main/default/objects/Account/fields/LPCR_FacturerCrecheMarche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FacturerCrecheMarche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturer par crèche / marché</label>
    <type>Checkbox</type>
</CustomField>