force-app/main/default/objects/Account/fields/LPCR_FacturerDepotPlateforme__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FacturerDepotPlateforme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturer à déposer sur plateforme</label>
    <type>Checkbox</type>
</CustomField>