force-app/main/default/objects/Account/fields/LPCR_FILOUE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FILOUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorisation FILOUE</label>
    <type>Checkbox</type>
</CustomField>