force-app/main/default/objects/Account/fields/LPCR_FinValiditePurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FinValiditePurchaseOrder__c</fullName>
    <label>Fin de validité Purchase Order</label>
    <type>Date</type>
</CustomField>