force-app/main/default/objects/Account/fields/LPCR_FormeJuridique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FormeJuridique__c</fullName>
    <label>Forme Juridique</label>
    <length>30</length>
    <type>Text</type>
</CustomField>