force-app/main/default/objects/Account/fields/LPCR_FormuleRevalorisation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FormuleRevalorisation__c</fullName>
    <label>Formule de revalorisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>