force-app/main/default/objects/Account/fields/LPCR_GroupeEtablissement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_GroupeEtablissement__c</fullName>
    <label>Groupe Etablissement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crèche</fullName>
            </value>
            <value>
                <fullName>Siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>