force-app/main/default/objects/Account/fields/LPCR_Handicap__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Handicap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handicap enfant dans la fraterie</label>
    <type>Checkbox</type>
</CustomField>