force-app/main/default/objects/Account/fields/LPCR_IBAN__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IBAN__c</fullName>
    <label>IBAN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>