force-app/main/default/objects/Account/fields/LPCR_IDCompteCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDCompteCreche__c</fullName>
    <label>ID Compte Creche</label>
    <length>20</length>
    <type>Text</type>
</CustomField>