force-app/main/default/objects/Account/fields/LPCR_IDCompteEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDCompteEntreprise__c</fullName>
    <label>ID Compte Entreprise</label>
    <length>18</length>
    <type>Text</type>
</CustomField>