force-app/main/default/objects/Account/fields/LPCR_IDCompteFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDCompteFamille__c</fullName>
    <label>ID compte famille</label>
    <length>18</length>
    <type>Text</type>
</CustomField>