force-app/main/default/objects/Account/fields/LPCR_IdExterne_Compte__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Compte__c</fullName>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>