force-app/main/default/objects/Account/fields/LPCR_IDExterne_CompteParent__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDExterne_CompteParent__c</fullName>
    <label>ID externe Compte Parent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>