force-app/main/default/objects/Account/fields/LPCR_IdExterneProprietaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterneProprietaire__c</fullName>
    <label>Id Externe Proprietaire</label>
    <length>50</length>
    <type>Text</type>
</CustomField>