force-app/main/default/objects/Account/fields/LPCR_IDIntranetCompteFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDIntranetCompteFamille__c</fullName>
    <externalId>true</externalId>
    <label>ID Intranet du Compte Famille</label>
    <length>40</length>
    <type>Text</type>
</CustomField>