force-app/main/default/objects/Account/fields/LPCR_IDSage__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDSage__c</fullName>
    <label>ID Sage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>