force-app/main/default/objects/Account/fields/LPCR_ImpactTauxEffort__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ImpactTauxEffort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utiliser ressources parents pour calcul</label>
    <type>Checkbox</type>
</CustomField>