force-app/main/default/objects/Account/fields/LPCR_IncidentPaiement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IncidentPaiement__c</fullName>
    <label>Incident paiement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Juridique</fullName>
            </value>
            <value>
                <fullName>Contentieux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>