force-app/main/default/objects/Account/fields/LPCR_InformationsFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InformationsFacture__c</fullName>
    <description>informations Famille à faire apparaître sur la facture réservataire</description>
    <inlineHelpText>informations Famille à faire apparaître sur la facture réservataire</inlineHelpText>
    <label>Informations facture</label>
    <type>TextArea</type>
</CustomField>