force-app/main/default/objects/Account/fields/LPCR_InterlocuteurServiceFamille1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InterlocuteurServiceFamille1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interlocuteur service famille</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes (Interlocuteur service famille)</relationshipLabel>
    <relationshipName>Compte_Entreprise</relationshipName>
    <type>Lookup</type>
</CustomField>