force-app/main/default/objects/Account/fields/LPCR_InterlocuteurServiceFamille2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InterlocuteurServiceFamille2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEL Interlocuteur service famille</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compte_Entreprise</relationshipName>
    <type>Lookup</type>
</CustomField>