force-app/main/default/objects/Account/fields/LPCR_IsNumericIDSage__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IsNumericIDSage__c</fullName>
    <formula>ISNUMBER( LPCR_IDSage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPCR_IsNumericIDSage</label>
    <type>Checkbox</type>
</CustomField>