force-app/main/default/objects/Account/fields/LPCR_JoindreEtatCAFFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_JoindreEtatCAFFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joindre état CAF facture</label>
    <type>Checkbox</type>
</CustomField>