force-app/main/default/objects/Account/fields/LPCR_LienChorus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LienChorus__c</fullName>
    <formula>If (Text( LPCR_PrivePublic__c) = &quot;Public&quot;,  HYPERLINK(&quot;https://chorus-pro.gouv.fr/&quot;, &quot;https://chorus-pro.gouv.fr/&quot;, &quot;_blank&quot;) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Chorus</label>
    <type>Text</type>
</CustomField>