force-app/main/default/objects/Account/fields/LPCR_LienSitePreinscription__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LienSitePreinscription__c</fullName>
    <inlineHelpText>URL du formulaire de préinscription pour le réservataire ou crèche</inlineHelpText>
    <label>Lien Site Préinscription</label>
    <type>Url</type>
</CustomField>