force-app/main/default/objects/Account/fields/LPCR_MailLivraisonFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MailLivraisonFacture__c</fullName>
    <label>Mail de livraison de la facture</label>
    <type>Email</type>
</CustomField>