force-app/main/default/objects/Account/fields/LPCR_MinimumFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MinimumFacturation__c</fullName>
    <label>Minimum de facturation?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>