force-app/main/default/objects/Account/fields/LPCR_ModeFinancement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ModeFinancement__c</fullName>
    <label>Mode de financement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAJE</fullName>
            </value>
            <value>
                <fullName>PSU</fullName>
            </value>
            <value>
                <fullName>Autre PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>