force-app/main/default/objects/Account/fields/LPCR_ModeleSpecifiqueFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ModeleSpecifiqueFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>champ à utiliser pour les comptes Entreprises lorsque le client a un modèle personnalisé de facture à mettre en place</description>
    <inlineHelpText>champ à utiliser lorsque le client a un modèle personnalisé de facture à mettre en place</inlineHelpText>
    <label>Modèle spécifique de facture</label>
    <referenceTo>csfb__Conga_Template__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>