force-app/main/default/objects/Account/fields/LPCR_MontantPSU__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantPSU__c</fullName>
    <description>Paramètre crèche correspondant au montant de subvention de la CAF alloué par crèche</description>
    <inlineHelpText>Paramètre crèche correspondant au montant de subvention de la CAF alloué par crèche</inlineHelpText>
    <label>Montant PSU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>