force-app/main/default/objects/Account/fields/LPCR_MoyenDeTransport__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MoyenDeTransport__c</fullName>
    <label>Moyen de transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>À pied</fullName>
            </value>
            <value>
                <fullName>Transports en commun</fullName>
            </value>
            <value>
                <fullName>Voiture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>