force-app/main/default/objects/Account/fields/LPCR_NAF__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NAF__c</fullName>
    <label>Code NAF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>