force-app/main/default/objects/Account/fields/LPCR_NbreOptions__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NbreOptions__c</fullName>
    <description>Nombre de demande d&#39;option sur l&#39;objet Lien Opportunité Crèche</description>
    <label>Nombre d&#39;options</label>
    <summarizedField>LPCR_LienCrecheOpportunite__c.LPCR_Nombredeplaces__c</summarizedField>
    <summaryFilterItems>
        <field>LPCR_LienCrecheOpportunite__c.Tech_Opportunite_Fermee__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>LPCR_LienCrecheOpportunite__c.LPCR_DemandeOption__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LPCR_LienCrecheOpportunite__c.LPCR_Creche__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>