force-app/main/default/objects/Account/fields/LPCR_NombreBerceaux__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreBerceaux__c</fullName>
    <label>Nombre de berceaux</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>