force-app/main/default/objects/Account/fields/LPCR_NombreContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreContrat__c</fullName>
    <label>Nombre de Contrat</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>