force-app/main/default/objects/Account/fields/LPCR_NombreEnfantPrevuVendredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfantPrevuVendredi__c</fullName>
    <label>Nombre d&apos;enfants prévu le vendredi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>