force-app/main/default/objects/Account/fields/LPCR_NombreEnfantsCharge__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfantsCharge__c</fullName>
    <label>Nombre d&#39;enfants à charge</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>