force-app/main/default/objects/Account/fields/LPCR_NombreEnfantsMardi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfantsMardi__c</fullName>
    <label>Nombre d&#39;enfants prévu le mardi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>