force-app/main/default/objects/Account/fields/LPCR_NombreEnfantsMercredi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreEnfantsMercredi__c</fullName>
    <label>Nombre d&apos;enfants prévu le mercredi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>