force-app/main/default/objects/Account/fields/LPCR_NombreMaximalPlaces__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreMaximalPlaces__c</fullName>
    <label>Nombre maximal de places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>