force-app/main/default/objects/Account/fields/LPCR_NombreOptions__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreOptions__c</fullName>
    <label>Nombre d&#39;options</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>