force-app/main/default/objects/Account/fields/LPCR_NombrePlacesAchetees__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlacesAchetees__c</fullName>
    <label>Nombre de places achetées</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>