force-app/main/default/objects/Account/fields/LPCR_NombreSection__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreSection__c</fullName>
    <label>Nombre de sections</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>