force-app/main/default/objects/Account/fields/LPCR_NombreStructures__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreStructures__c</fullName>
    <label>Nombre de structures</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>