force-app/main/default/objects/Account/fields/LPCR_NumeroAllocataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroAllocataire__c</fullName>
    <formula>LPCR_Representant1__r.LPCR_NumeroAllocataire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro d&#39;allocataire</label>
    <type>Text</type>
</CustomField>