force-app/main/default/objects/Account/fields/LPCR_NumeroFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroFacture__c</fullName>
    <label>Numéro Facture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>