force-app/main/default/objects/Account/fields/LPCR_NumeroPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroPurchaseOrder__c</fullName>
    <label>Numéro du Purchase Order</label>
    <length>128</length>
    <type>Text</type>
</CustomField>