force-app/main/default/objects/Account/fields/LPCR_PasDeSIRET__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PasDeSIRET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pas de numéro de SIRET</label>
    <type>Checkbox</type>
</CustomField>