force-app/main/default/objects/Account/fields/LPCR_PlanningTournant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlanningTournant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plannings tournants</label>
    <type>Checkbox</type>
</CustomField>