force-app/main/default/objects/Account/fields/LPCR_PrefixeNumFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrefixeNumFacture__c</fullName>
    <label>Préfixe de n° de facture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>