force-app/main/default/objects/Account/fields/LPCR_PrestataireActuelCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrestataireActuelCreche__c</fullName>
    <label>Prestataire actuel crèche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Babilou</fullName>
            </value>
            <value>
                <fullName>People and Baby</fullName>
            </value>
            <value>
                <fullName>La maison bleue</fullName>
            </value>
            <value>
                <fullName>Crèche attitude</fullName>
            </value>
            <value>
                <fullName>Crèches de France</fullName>
            </value>
            <value>
                <fullName>Ma place en crèche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>