force-app/main/default/objects/Account/fields/LPCR_ProcessRevenuCascade__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ProcessRevenuCascade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Waterfall Revenue</label>
    <type>Checkbox</type>
</CustomField>