force-app/main/default/objects/Account/fields/LPCR_PSU__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PSU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSU</label>
    <type>Checkbox</type>
</CustomField>