force-app/main/default/objects/Account/fields/LPCR_PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PurchaseOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Order</label>
    <type>Checkbox</type>
</CustomField>