force-app/main/default/objects/Account/fields/LPCR_RaisonSociale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RaisonSociale__c</fullName>
    <label>Raison sociale</label>
    <length>128</length>
    <type>Text</type>
</CustomField>