force-app/main/default/objects/Account/fields/LPCR_RC__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RC</label>
    <type>Checkbox</type>
</CustomField>