force-app/main/default/objects/Account/fields/LPCR_RCS__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RCS__c</fullName>
    <label>RCS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>