force-app/main/default/objects/Account/fields/LPCR_Region__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Region__c</fullName>
    <label>Région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>IDF et Grandes villes</fullName>
            </value>
            <value>
                <fullName>Province</fullName>
            </value>
            <value>
                <fullName>- Aucun -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>