force-app/main/default/objects/Account/fields/LPCR_Region_commerciale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Region_commerciale__c</fullName>
    <formula>IF(
ISNULL(TEXT(Owner.LPCR_Region_commerciale__c)), &quot;Pas de région / utilisateur inactif&quot;,
TEXT( Owner.LPCR_Region_commerciale__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région commerciale</label>
    <type>Text</type>
</CustomField>