force-app/main/default/objects/Account/fields/LPCR_RegionComFormule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionComFormule__c</fullName>
    <formula>IF(
ISNULL(TEXT(LPCR_RegionComFormule__c)), &quot;Pas de région / utilisateur inactif&quot;,
TEXT(LPCR_RegionComFormule__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région commerciale</label>
    <type>Text</type>
</CustomField>