force-app/main/default/objects/Account/fields/LPCR_RegionCommerciale__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegionCommerciale__c</fullName>
    <label>DEL Région  commerciale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_RegionCommerciale</valueSetName>
    </valueSet>
</CustomField>