force-app/main/default/objects/Account/fields/LPCR_RegleFonctionnement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegleFonctionnement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Règle de fonctionnement</label>
    <type>Checkbox</type>
</CustomField>