force-app/main/default/objects/Account/fields/LPCR_RegularisationAuto__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RegularisationAuto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Régularisation automatique des congés NO</label>
    <type>Checkbox</type>
</CustomField>