force-app/main/default/objects/Account/fields/LPCR_RemiseConcurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RemiseConcurrence__c</fullName>
    <label>Date prévue de remise en concurrence</label>
    <type>Date</type>
</CustomField>