force-app/main/default/objects/Account/fields/LPCR_Representant1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Representant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Représentant 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Représentant N°1</relationshipLabel>
    <relationshipName>Representant1</relationshipName>
    <type>Lookup</type>
</CustomField>