force-app/main/default/objects/Account/fields/LPCR_Representant2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Representant2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Représentant 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Représentant N°2</relationshipLabel>
    <relationshipName>Representant2</relationshipName>
    <type>Lookup</type>
</CustomField>