force-app/main/default/objects/Account/fields/LPCR_ResponsableServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ResponsableServiceFamille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Service Famille</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>