force-app/main/default/objects/Account/fields/LPCR_RevenuMensuelFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RevenuMensuelFamille__c</fullName>
    <label>Revenu fiscal mensuel année N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>