force-app/main/default/objects/Account/fields/LPCR_RFA__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RFA__c</fullName>
    <label>RFA</label>
    <type>Picklist</type>
    <valueSet>
		<restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>