force-app/main/default/objects/Account/fields/LPCR_RIB__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RIB__c</fullName>
    <label>RIB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>