force-app/main/default/objects/Account/fields/LPCR_RUM__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RUM__c</fullName>
    <label>RUM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>