force-app/main/default/objects/Account/fields/LPCR_Scoring__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Scoring__c</fullName>
    <label>Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>