force-app/main/default/objects/Account/fields/LPCR_Siege__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Siege__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siège</label>
    <type>Checkbox</type>
</CustomField>